--- a/democrud/democrud.csproj
+++ b/democrud/democrud.csproj
@@ -22,7 +22,7 @@
 
   <ItemGroup>
     <None Update="Data\AppDB.db">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
